--- a/index.html
+++ b/index.html
@@ -63,4 +63,5 @@
         <p><strong>Get Ready to Shoot!</strong></p>
         <p><strong>SOME ZOMBIES!!!!(and maybe some people)</strong></p>
         <p>Whether you're a seasoned Roblox pro or a newbie, Josh Hutcherson's odd Obby awaits. Strap on your virtual sneakers, channel your inner Katniss Everdeen, and conquer the challenges! 🏹🔥</p>
-        <p>Remember, the clock is ticking, and the leaderboard awaits. Will you be the first to win?
+        <p>Remember, the clock is ticking, and the leaderboard awaits. Will you be the first to win?</p>
+        <p><a href = "https://www.guilded.gg/i/k1ljR4L2">For more updates join Josh Hutcherson's guilded</a>(Seven more days till replacement)</p>
